k8s/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: taskflow-app
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: headless-svc
  replicas: 1
  template: 
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgres-storage
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-init
      volumes:
        - name: postgres-init
          configMap:
            name: taskflow-init-db

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
