k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend 
  namespace: taskflow-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container 
          image: muhammadelmansi/taskflow-frontend
          ports:
            - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: frontend-svc 
  namespace: taskflow-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
