k8s/headless-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: headless-svc
  namespace: taskflow-app
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
